# rules_cypress

./: .gitignore  README.md  WORKSPACE  internal_deps.bzl
.github/workflows/: workspace_snippet.sh
cypress/: BUILD.bazel  defs.bzl  dependencies.bzl  repositories.bzl  toolchain.bzl
cypress/private/: BUILD.bazel  cypress_test.bzl  runner.js  toolchains_repo.bzl
cypress/tests/basic/: BUILD.bazel  cypress.config.js  runner.js
docs/: BUILD.bazel  rules.md
e2e/workspace/: BUILD  WORKSPACE
