load("@aspect_bazel_lib//lib:copy_to_bin.bzl", "copy_to_bin")
load("@bazel_skylib//:bzl_library.bzl", "bzl_library")

exports_files(["runner.js"])

bzl_library(
    name = "toolchains_repo",
    srcs = ["toolchains_repo.bzl"],
    visibility = ["//cypress:__subpackages__"],
)

copy_to_bin(
    name = "runner",
    srcs = ["runner.js"],
    visibility = ["//visibility:public"],
)
