load("@aspect_bazel_lib//lib:copy_to_bin.bzl", "copy_to_bin")
load("@bazel_skylib//:bzl_library.bzl", "bzl_library")

exports_files(["runner.js"])

copy_to_bin(
    name = "runner",
    srcs = ["runner.js"],
    visibility = ["//visibility:public"],
)

bzl_library(
    name = "toolchains_repo",
    srcs = ["toolchains_repo.bzl"],
    visibility = ["@aspect_rules_cypress//cypress:__subpackages__"],
)

bzl_library(
    name = "cypress_test",
    srcs = ["cypress_test.bzl"],
    visibility = ["@aspect_rules_cypress//cypress:__subpackages__"],
)
